--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,7 @@
 Source: libpam-athena-locker
 Section: debathena/libs
 Priority: optional
-Maintainer: Tim Abbott <tabbott@mit.edu>
+Maintainer: Debian-Athena Project <debathena@mit.edu>
 Standards-Version: 3.7.2
 Build-Depends: @cdbs@, libpam0g-dev, libopenafs-dev
 
