--- a/debian/rules
+++ b/debian/rules
@@ -5,3 +5,7 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/makefile.mk
 
 DEB_MAKE_INSTALL_TARGET = install DESTDIR=$(DEB_DESTDIR)
+
+install/libpam-athena-locker::
+	install -D -m 644 debian/libpam-athena-locker.pam-config \
+	  $(DEB_DESTDIR)/usr/share/pam-configs/athena-locker
