--- a/debian/control.in
+++ b/debian/control.in
@@ -11,6 +11,6 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, debathena-attach
 Conflicts: debathena-libpam-openafs-session (<= 1.0-5debathena2)
 Description: PAM module to attach Athena user locker
  This PAM module attaches the user's Athena locker.  It should be used
- instead of libpam-openafs-session on Debian-Athena machines because
- it attaches the user's home locker, rather than simply getting tokens
+ instead of libpam-openafs-session on Debathena machines because it
+ attaches the user's home locker, rather than simply getting tokens
  for the machine's home cell.
