In afs-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In alpine-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In apparmor-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In athinfod-cluster-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In auto-update:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3 In base:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In chrony-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In cluster-cups-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In cluster-login-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In cupsys-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In dns-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In emacs-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In email-icon-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In finger-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In fingerd-config:   * Switch from control.in to control (Trac: #561)   * Bump Standards-Version to 3.9.3   * Bump compat level to 7 In from-config:   * Switch from con

--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: libpam-athena-locker
 Section: debathena/libs
 Priority: optional
 Maintainer: Debathena Project <debathena@mit.edu>
-Standards-Version: 3.7.2
-Build-Depends: @cdbs@, libpam0g-dev, libopenafs-dev
+Standards-Version: 3.9.3
+Build-Depends: cdbs, debhelper, dh-buildinfo, libpam0g-dev, libopenafs-dev
 
 Package: libpam-athena-locker
 Architecture: any
